--- a/composer.json
+++ b/composer.json
@@ -2,25 +2,18 @@
     "name": "kimtooflex/envswitch",
     "description": " Code once, host anywhere, run everywhere.",
     "keywords": ["kimtooflex", "environment", "bunifu", "switch"],
-    "authors": [
-        {
-            "name": "Kimutai Kipngetich",
-            "email": "kimtooflex@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=5.3.0"
-    },
     "autoload": {
-        "psr-0": {
-            "kimtooflex": "src/"
-        }
+      "psr-4": {
+         "kimtooflex\\": "src/"
+      }
+     },
+    "require": {
+      "php": ">=5.3.0"
     },
     "repositories": [
     {
         "type": "vcs",
         "url": "https://github.com/KimTooFlex/envswitch"
     }
-  ]
+]
 }
