--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,24 @@
 {
     "name": "kimtooflex/envswitch",
-    "description": " Code once, host anywhere, run everywhere.",
-    "keywords": ["kimtooflex", "environment", "bunifu", "switch"],
-    "autoload": {
-      "psr-4": {
-         "kimtooflex\\": "src/"
-      }
-     },
+    "description": "Code once, host anywhere, run everywhere",
+    "keywords": ["template", "composer", "package","kimtooflex", "environment", "bunifu", "switch"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "kipngetich kimutai",
+            "email": "kimtooflex@gmail.com"
+        }
+    ],
+    "type": "project",
     "require": {
-      "php": ">=5.3.0"
+		"php": ">=5.4"
     },
-    "repositories": [
-    {
-        "type": "vcs",
-        "url": "https://github.com/KimTooFlex/envswitch"
+	"require-dev": {
+		"phpunit/phpunit": "5.2.*"
+    },
+	"autoload": {
+        "psr-4": {
+            "kimtooflex\\envswitch\\": "src/"
+        }
     }
-]
 }
